--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                       <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>)</u>.
                     <br><br>
                     In 2023, I have been honored to begin collaborating with the
-                    <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL</b>,
-                    led by <b>Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and shifted my primary research
+                    <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
+                    led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and shifted my primary research
                     focus to <u>Embodied AI, particularly Reinforcement Learning (RL)</u>. My current work investigates how,
                     under a <u>finite interaction budget</u>, a robotic agent can learn to
                     <u>distinguish heuristic signals from the true task objective</u> while still
