--- a/index.html
+++ b/index.html
@@ -60,20 +60,24 @@
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
                         <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
                     Before 2023, my research primarily centered on
-                    <u>machine learning for audio and speech modalities</u>. I focused on improving <u>robustness to diverse acoustic environments
+                    <u>machine learning for audio and speech modalities</u>. I focused on improving <u>robustness to diverse acoustic environments</u>
                       (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> &
-                      <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</u> and on
-                    <u>how such robustness can be continually learned and adapted over time
+                      <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>) and on
+                    <u>how such robustness can be continually learned and adapted over time</u>
                       (<a href="https://arxiv.org/pdf/2005.11760" target="_blank">Interspeech'20</a> &
-                      <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>)</u>.
+                      <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>).
                     <br><br>
                     In 2023, I have been honored to begin collaborating with the
                     <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
                     led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and shifted my primary research
-                    focus to <u>Embodied AI, particularly Reinforcement Learning (RL)</u>. My current work investigates how,
+                    focus on Reinforcement Learning for robots. My current work investigates how,
                     under a <u>finite interaction budget</u>, a robotic agent can learn to
                     <u>distinguish heuristic signals from the true task objective</u> while still
-                    <u>optimizing for the real but sparse success outcomes</u>.
+                    <u>optimizing for the real but sparse success outcomes</u>, contributing to:
+                    the <u>real-world deployment of locomotion policies</u>
+                      (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>),
+                    and <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks</u>
+                      (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
                   </p>
                 </td>
 
@@ -188,11 +192,7 @@
               In practice, RL for robotics often struggles with complex environments because it relies on brittle,
               hand-engineered dense rewards or assumes unrealistic sampling budgets (e.g., relying on proximal heuristics
               while the true target is a sparse success outcome). I developed a novel RL framework that optimizes for
-              target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping. This direction has led to two papers:
-                    one on the <u>real-world deployment of locomotion policies
-                      (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)</u>,
-                    and another on <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks
-                      (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>)</u>.
+              target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping. 
             </div>
             <br>
 
