--- a/index.html
+++ b/index.html
@@ -67,18 +67,16 @@
                       (<a href="https://arxiv.org/pdf/2005.11760" target="_blank">Interspeech'20</a> &
                       <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>).
                     <br><br>
-                    In 2023, I have been honored to begin collaborating with the
+                    Since 2023, I have been honored to collaborate with the
                     <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
-                    led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and shifted my primary research
-                    focus on Reinforcement Learning for robots. My current work investigates how,
-                    under a <u>finite interaction budget</u>, a robotic agent can learn to
-                    <u>distinguish heuristic signals from the true task objective</u> while still
-                    <u>optimizing for the real but sparse success outcomes</u>, contributing to:
-                    the <u>real-world deployment of locomotion policies</u>
-                      (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>),
-                    and <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks</u>
-                      (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
-                  </p>
+                    led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and have shifted my primary research
+                    focus to Reinforcement Learning for robots. My current work investigates how a robotic agent can,
+                    under a <u>finite interaction budget</u>, <u>distinguish heuristic signals from the true task objective</u> while still
+                    <u>optimizing real but sparse success outcomes</u>. I contributed to the <u>real-world deployment of locomotion policies</u>
+                    (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
+                    and to <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks</u>
+                    (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
+                </p>
                 </td>
 
                 <td style="padding: 2%; width: 20%; max-width: 20%; top; padding-top: 80px;">
