--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       University, where I worked closely with
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof.
                         <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
-                    Before 2023, my research primarily centered on
+                    During that period, my research primarily centered on
                     <u>machine learning for audio and speech modalities</u>. I focused on improving <u>robustness to diverse acoustic environments</u>
                       (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> &
                       <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>) and on
@@ -67,7 +67,7 @@
                       (<a href="https://arxiv.org/pdf/2005.11760" target="_blank">Interspeech'20</a> &
                       <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>).
                     <br><br>
-                    Since 2023, I have been honored to collaborate with the
+                    In addition, since 2023, I have been honored to collaborate with the
                     <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
                     led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and have shifted my primary research
                     focus to Reinforcement Learning for robots. My current work investigates how a robotic agent can,
