--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
                     <br><br>
                     In addition, since 2023, I have been honored to collaborate with the
                     <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
-                    led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>, and have shifted my primary research
-                    focus to Reinforcement Learning for robots. My current work investigates how a robotic agent can,
-                    under a <u>finite interaction budget</u>, <u>distinguish heuristic signals from the true task objective</u> while still
+                    led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>. My current work focuses on <u>Reinforcement Learning for robots under a
+                    finite interaction budget</u>, aiming to <u>disentangle heuristic signals from the true task objective</u> while still
                     <u>optimizing real but sparse success outcomes</u>. I contributed to the <u>real-world deployment of locomotion policies</u>
                     (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
                     and to <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks</u>
