--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL,
                     led by Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>. My current work focuses on <u>Reinforcement Learning for robots under a
                     finite interaction budget</u>, aiming to <u>disentangle heuristic signals from the true task objective</u> while still
-                    <u>optimizing real but sparse success outcomes</u>. I contributed to the <u>real-world deployment of locomotion policies</u>
+                    <u>optimizing real but sparse success outcomes</u>. I contributed to the real-world deployment of locomotion policies
                     (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
-                    and to <u>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks</u>
+                    and to an advanced RL algorithm that achieves consistent gains on 31 robotic tasks
                     (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
                 </p>
                 </td>
