--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
           <td class="pub-description" style="vertical-align: middle;">
             <papertitle>Text-to-Appearance Inverse Rendering with Vision–Language Feedback</papertitle><br><br>
             We study <u>unpaired text-to-appearance inverse rendering</u>, where a differentiable renderer is optimized using
-            <u>only text prompts, without any reference images</u>. Since direct CLIP-based optimization from text is often
-            <u>vague and under-constrained</u>, we introduce vision–language feedback as an <u>optimization confiner</u>.
+            only text prompts, without any reference images. Since direct CLIP-based optimization from text is often
+            vague and under-constrained, we introduce vision–language feedback as an <u>optimization confiner</u>.
             The VLM <u>(1) augments ambiguous textual descriptions into concrete, parameter-aware instructions</u> and <u>(2) determines
-            which scene parameters should be updated, while simultaneously tightening feasible ranges for all parameters</u>.
+            which scene parameters should be updated</u>, while simultaneously <u>tightening feasible ranges for all parameters</u>.
             This guidance stabilizes optimization and improves prompt adherence and visual clarity compared to
             naive CLIP-only methods.
             <br>
